Thu Oct  4 23:40:04 2012  Narihiro Nakamura  <authornari@gmail.com>

	* gc.c (init_heap): call init_mark_stack before to allocate
	  altstack. This change avoid the stack overflow at the signal
	  handler on 32bit, but I don't understand reason... [Feature #7095]

Thu Oct  4 22:39:27 2012  Koichi Sasada  <ko1@atdot.net>

	* insns.def (getlocal, setlocal): remove old getlocal/setlocal
	  instructions and rename getdaynmic/setdynamic instructions
	  to getlocal/setlocal.

	* compile.c: ditto.

	* iseq.c: remove TS_DINDEX.

	* vm_exec.h (dindex_t): remove type definition of `dindex_t'.

	* tool/instruction.rb: ditto.

Thu Oct  4 21:44:17 2012  Koichi Sasada  <ko1@atdot.net>

	* vm.c (vm_analysis_insn|operand|register): use st_insert
	  instead of using rb_hash_aset() because rb_hash_aset()
	  check $SAFE.

Thu Oct  4 21:15:26 2012  Koichi Sasada  <ko1@atdot.net>

	* vm.c (VM_COLLECT_USAGE_DETAILS): make new VM usage analysis
	  hooks (old macro name is COLLECT_USAGE_ANALYSIS).
	  This feature is only for VM developers.  (I'm not sure I can use
	  `VM developers' (the plural form) in this sentence).
	  If VM_COLLECT_USAGE_DETAILS is not 0, VM enables the following
	  usage collection features:
	    (1) insntruction: collect intruction usages.
	    (2) operand: collect operand usages.
	    (3) register: collect register usages.
	  The results are stored in
	    RubyVM::USAGE_ANALYSIS_INSN for (1, 2),
	    RubyVM::USAGE_ANALYSIS_INSN_BIGRAM for (1) and
	    RubyVM::USAGE_ANALYSIS_REGS for (3).
	  You can stop collecting usages with
	    RubyVM::USAGE_ANALYSIS_INSN_STOP(),
	    RubyVM::USAGE_ANALYSIS_OPERAND_STOP(),
	    RubyVM::USAGE_ANALYSIS_REGISTER_STOP()
	  for (1), (2), (3) respectively.
	  You can also change the hook functions by setting
	  C level global variables
	    `ruby_vm_collect_usage_func_(insn|operand|register)'
	  for (1), (2), (3) respectively.
	  See codes for more details.

	* tool/instruction.rb: fix macro names.
